--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "private": true,
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
-    "build:web": "expo export --platform web",
-    "lint": "expo lint",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "npx expo export:web",
-    "vercel-build": "npx expo export:web"
+    "build": "npx expo export --platform web --output-dir dist",
+    "vercel-build": "npx expo export --platform web --output-dir dist",
+    "lint": "expo lint"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
